unpackaged/main/default/objects/SBQQ__OrderItemConsumptionRate__c/fields/SBQQ__LowerBound__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__LowerBound__c</fullName>
    <inlineHelpText>La quantité d&#39;utilisation la plus faible pour ce taux de consommation.</inlineHelpText>
    <label>Lower Bound</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>