unpackaged/main/default/objects/SBQQ__OrderItemConsumptionRate__c/fields/SBQQ__OrderItemConsumptionSchedule__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__OrderItemConsumptionSchedule__c</fullName>
    <inlineHelpText>Ce taux fait partie de cette planification.</inlineHelpText>
    <label>Order Product Consumption Schedule</label>
    <referenceTo>SBQQ__OrderItemConsumptionSchedule__c</referenceTo>
    <relationshipLabel>Order Product Consumption Rates</relationshipLabel>
    <relationshipName>OrderItemConsumptionRates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>