unpackaged/main/default/objects/SBQQ__OrderItemConsumptionRate__c/fields/SBQQ__ProcessingOrder__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ProcessingOrder__c</fullName>
    <inlineHelpText>L&#39;ordre de traitement du taux d&#39;utilisation entre des taux multiples. Ces taux de consommation sont évalués en commençant par l&#39;ordre de traitement le plus faible.</inlineHelpText>
    <label>Processing Order</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>