unpackaged/main/default/objects/SBQQ__OrderItemConsumptionRate__c/fields/SBQQ__UpperBound__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UpperBound__c</fullName>
    <inlineHelpText>La quantité d&#39;utilisation la plus élevée pour ce taux de consommation.</inlineHelpText>
    <label>Upper Bound</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>